# SiriusScope

./: ARCHITECTURE.md  CMakeLists.txt  CONTEXT.md  README.md  Todo.md
src/app/: appstate.cpp  appstate.h  frequencyviewportmodel.cpp  frequencyviewportmodel.h  main.cpp  spectrumcontrollerstub.cpp  spectrumcontrollerstub.h  spectrumdecimator.cpp  spectrumdecimator.h
src/ui/: Main.qml
src/ui/components/: AntennaIndicator.qml  FooterDataView.qml  MenuBarApp.qml  SpectrumView.qml  WaterfallView.qml
src/ui/components/AntennaIndicator/: AntennaIndicator.qml  Indicator.qml  TargetTracker.qml
src/ui/components/Spectrum/: BandItem.qml
src/ui/components/SpectrumView/: BandItem.qml  SpectrumView.qml
